reward,account and payment pages are done

--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
         <div class="banner-wrapper"><span>Free shiping on orders over $250</span></div>
         <div class="principal-wrapper">
             <aside>
-                <div class="textlogo-wrapper">Boundary</div>
+                <div class="textlogo-wrapper">
+                    <img alt="Boundary logo" src="assets/logo-boundary.png" />
+                </div>
                 <div class="menu-wrapper">
                     <div class="logo-wrapper">
-                        <img alt="vip logo" data-content="orders-container" class="content img-item" src="assets/logo-vip.png" />
-                        <img alt="gold logo" data-content="reward-container" class="content img-item hidden" src="assets/logo-gold.png" />
-                        <img alt="member logo" data-content="payment-container" class="content img-item hidden" src="assets/logo-member.png" />
-                        <img alt="elite logo"  data-content="account-container" class="content img-item  hidden" src="assets/logo-elite.png" />
+                        <img alt="vip logo" data-content="orders-container" class="content img-item"
+                            src="assets/logo-vip.png" />
+                        <img alt="gold logo" data-content="reward-container" class="content img-item hidden"
+                            src="assets/logo-gold.png" />
+                        <img alt="member logo" data-content="payment-container" class="content img-item hidden"
+                            src="assets/logo-member.png" />
+                        <img alt="elite logo" data-content="account-container" class="content img-item  hidden"
+                            src="assets/logo-elite.png" />
                     </div>
                     <nav>
                         <ul>
@@ -38,17 +44,145 @@
                 </div>
             </aside>
             <section>
-                <div class="content orders-container">
-                    <p>orders</p>
-                </div>
-                <div class="content reward-container hidden">
-                    <p>reward</p>
-                </div>
-                <div class="content account-container hidden">
-                    <p>account</p>
-                </div>
-                <div class="content payment-container hidden">
-                    <p>payment</p>
+                <nav class="additional-menu">
+                    <a class="shop">SHOP</a>
+                    <a class="find"><img alt="find icon" src="assets/icon-find.png" /></a>
+                    <a class="shoppingcart"><img alt="cart icon" src="assets/icon-cart-2.png" /></a>
+                    <a class="exit"><img alt="exit icon" src="assets/icon-exit-3.png" /></a>
+                </nav>
+                <div class="container">
+                    <div class="content orders-container">
+                        <p>orders</p>
+                    </div>
+                    <div class="content reward-container hidden">
+                        <div class="title-wrapper">
+                            <h1>Reward Status</h1>
+
+                        </div>
+                        <div class="activity-wrapper">
+                            <div class="left-column">
+                                <h2>Activity</h2>
+                            </div>
+                            <div class="middle-column">
+                                <div>
+                                    <div class="subtitle">VIP</div>
+                                    <span>Current Status</span>
+                                </div>
+                                <div>
+                                    <div class="subtitle">$ 678.42</div>
+                                    <span>Lifetime Spend</span>
+                                </div>
+                                <div>
+                                    <div class="subtitle">003</div>
+                                    <span>Orders</span>
+                                </div>
+                            </div>
+                            <div class="right-column">
+                                <div>
+                                    <div class="subtitle">GOLD</div>
+                                    <span>Next Tier</span>
+                                </div>
+                                <div>
+                                    <div class="subtitle">$ 321.68</div>
+                                    <span>To Gold Status</span>
+                                </div>
+                                <div>
+                                    <div class="subtitle">007</div>
+                                    <span>Referrals</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="benefits-wrapper">
+                            <div class="left-column">
+                                <h2>Benefits</h2>
+                            </div>
+                            <div class="benefits-image-wrapper">
+                                <img alt="recurrent-icon" src="assets/icon-recurrent.png" />
+                            </div>
+                            <div class="benefits-image-wrapper">
+                                <img alt="savings-icon" src="assets/icon-savings.png" />
+                            </div>
+
+                        </div>
+                    </div>
+
+
+                    <div class="content account-container hidden">
+                        <div class="title-wrapper">
+                            <h1>Account Settings</h1>
+                            <h2>Account</h2>
+                        </div>
+                        <form>
+                            <div class="credentiales-wrapper">
+                                <div>
+                                    <input required class="input-validation" type="text" name="name_input" id="name"
+                                        value="Ben Cline" />
+                                    <input required class="input-validation" type="tel" name="phone_input" id="phone"
+                                        value="+1 801 641 09" />
+
+                                </div>
+                                <div>
+
+                                    <input required class="input-validation" type="email" name="email_input" id="email"
+                                        value="ben@rallyinteractive.com" />
+                                    <input required class="input-validation" type="password" name="password_input"
+                                        id="password" value="***********" />
+                                </div>
+                                <div class="registration-wrapper">
+                                    <button type="submit">
+                                        SAVE CHANGES
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="addresses-wrapper">
+                                <div class="title-wrapper">
+                                    <h2>
+                                        Addresses
+                                    </h2>
+                                </div>
+                                <div class="addresses-inputs">
+                                    <div class="address1">
+                                        <span>Ben Cline</span>
+                                        <span>1234 S. Flestwood Mac Dr</span>
+                                        <span>Salt Lake City, UT B4109</span>
+                                        <span>Unites States</span>
+                                        <span>+1 801 641 09</span>
+                                    </div>
+                                    <div class="address2">
+                                        <span>Ben Cline</span>
+                                        <span>C/O Rally Interactive</span>
+                                        <span>Salt Lake City, UT B4109</span>
+                                        <span>Unites States</span>
+                                        <span>+1 801 641 09</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </form>
+                    </div>
+
+                    <div class="content payment-container hidden">
+                        <div class="title-wrapper">
+                            <h1>Payment Methods</h1>
+                        </div>
+                        <div class="cards-wrapper">
+                            <div class="card-section">
+                                <img alt="card 1" src="assets/card-1.png" />
+                            </div>
+                            <div class="card-section">
+                                <img alt="card 2" src="assets/card-2.png" />
+                            </div>
+                            <div class="card-section">
+                                <img alt="card 3" src="assets/card-3.png" />
+                            </div>
+                            <div class="card-section">
+                                <div class="img-wrapper">
+                                    <img alt="plus icon" src="assets/icon-plus.png" />
+                                </div>
+                                <div>AND CARD</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
