reward, payment and account pages are ready

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </nav>
                 <div class="container">
                     <div class="content orders-container">
-                        <p>orders</p>
+                        <p>your orders</p>
                     </div>
                     <div class="content reward-container hidden">
                         <div class="title-wrapper">
