--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                     <input required class="input-validation" type="email" name="email_input" id="email"
                                         value="ben@rallyinteractive.com" />
                                     <input required class="input-validation" type="password" name="password_input"
-                                        id="password" value="***********" />
+                                        id="password" value="passwordTest" />
                                 </div>
                                 <div class="registration-wrapper">
                                     <button type="submit">
@@ -141,14 +141,14 @@
                                     </h2>
                                 </div>
                                 <div class="addresses-inputs">
-                                    <div class="address1">
+                                    <div class="address">
                                         <span>Ben Cline</span>
                                         <span>1234 S. Flestwood Mac Dr</span>
                                         <span>Salt Lake City, UT B4109</span>
                                         <span>Unites States</span>
                                         <span>+1 801 641 09</span>
                                     </div>
-                                    <div class="address2">
+                                    <div class="address">
                                         <span>Ben Cline</span>
                                         <span>C/O Rally Interactive</span>
                                         <span>Salt Lake City, UT B4109</span>
