small changes on image shown and selected nav item

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="menu-wrapper">
                     <div class="logo-wrapper">
-                        <img alt="vip logo" data-content="orders-container" class="content img-item"
+                        <img alt="vip logo" data-content="orders-container" class="content img-item  hidden"
                             src="assets/logo-vip.png" />
                         <img alt="gold logo" data-content="reward-container" class="content img-item hidden"
                             src="assets/logo-gold.png" />
@@ -34,7 +34,7 @@
                     </div>
                     <nav>
                         <ul>
-                            <li><a class="menu-item selected" data-content="orders-container">Your Orders</a></li>
+                            <li><a class="menu-item" data-content="orders-container">Your Orders</a></li>
                             <li><a class="menu-item" data-content="reward-container">Reward Status</a></li>
                             <li><a class="menu-item" data-content="account-container">Account Settings</a></li>
                             <li><a class="menu-item" data-content="payment-container">Payment Methods</a></li>
@@ -51,7 +51,7 @@
                     <a class="exit"><img alt="exit icon" src="assets/icon-exit-3.png" /></a>
                 </nav>
                 <div class="container">
-                    <div class="content orders-container">
+                    <div class="content orders-container hidden">
                         <p>your orders</p>
                     </div>
                     <div class="content reward-container hidden">
