small changes on your order page(html+css+js)

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </div>
                         <div class="order-wrapper">
                             <div class="image-product">
-                                <img alt="product" src="assets/product-1/product.png" />
+                                <img id="ProductOrderImage" alt="product" src="assets/product-1/product.png" />
                             </div>
                             <div class="details-order">
                                 <div class="order-status">
@@ -82,15 +82,15 @@
                                 </div>
                                 <div class="additional-products-ordered">
                                     <span>Also more in this order</span>
-                                    <div class="more-products-order">
+                                    <div id="imageContainer" class="more-products-order">
                                         <div>
                                             <img alt="addition-1" src="assets/product-1/addition-1.png" />
                                         </div>
                                         <div>
-                                            <img alt="addition-3" src="assets/product-1/addition-3.png" />
+                                            <img alt="addition-2" src="assets/product-1/addition-2.png" />
                                         </div>
                                         <div>
-                                            <img alt="addition-4" src="assets/product-1/addition-4.png" />
+                                            <img alt="addition-3" src="assets/product-1/addition-3.png" />
                                         </div>
                                         <div>
                                             <div>+3</div>
@@ -207,7 +207,7 @@
                             <h1>Account Settings</h1>
                             <h2>Account</h2>
                         </div>
-                        <form>
+                        <form name="myAccountForm">
                             <div class="credentiales-wrapper">
                                 <div>
                                     <input required class="input-validation" type="text" name="name_input" id="name"
