--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 </div>
             </aside>
             <section>
+                <!-- pe your orders nu ar trebui sa ai meniul, trebuie o extra conditie sa il ascunzi pe pagina aceasta -->
                 <nav class="additional-menu">
                     <a class="shop">SHOP</a>
                     <a class="find"><img alt="find icon" src="assets/icon-find.png" /></a>
@@ -51,6 +52,7 @@
                     <a class="exit"><img alt="exit icon" src="assets/icon-exit-3.png" /></a>
                 </nav>
                 <div class="container">
+                    <!-- initial cand intra cineva pe pagina aceasta sectiune nu ar trebui sa fie hidden -->
                     <div class="content orders-container hidden" id="yourOrders">
                         <div class="title-wrapper">
                             <h1>Your orders</h1>
