navigation using jquery

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="resources/main.css">
+    <script src="bundles/jquery/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
@@ -44,7 +45,6 @@
                 </div>
             </aside>
             <section>
-                <!-- pe your orders nu ar trebui sa ai meniul, trebuie o extra conditie sa il ascunzi pe pagina aceasta -->
                 <nav class="additional-menu">
                     <a class="shop">SHOP</a>
                     <a class="find"><img alt="find icon" src="assets/icon-find.png" /></a>
@@ -52,7 +52,6 @@
                     <a class="exit"><img alt="exit icon" src="assets/icon-exit-3.png" /></a>
                 </nav>
                 <div class="container">
-                    <!-- initial cand intra cineva pe pagina aceasta sectiune nu ar trebui sa fie hidden -->
                     <div class="content orders-container hidden" id="yourOrders">
                         <div class="title-wrapper">
                             <h1>Your orders</h1>
@@ -284,7 +283,7 @@
             </section>
         </div>
     </div>
-    <script src="resources/main.js"></script>
+    <script src="resources/main-jquery.js"></script>
     <noscript>
         Your browser currently does not support or has JS disabled.
     </noscript>
